--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body>
+  <body class='theme-base-0i layout-reverse sidebar-overlay'>
 
     {% include sidebar.html %}
 
@@ -12,10 +12,10 @@
     <div class="wrap">
       <div class="masthead">
         <div class="container">
-          <h3 class="masthead-title">
+          <p class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
-          </h3>
+          </p>
         </div>
       </div>
 
@@ -26,6 +26,6 @@
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-    <script src='{{ site.baseurl }}/public/js/script.js'></script>
+    <!-- <script src='{{ site.baseurl }}/public/js/script.js'></script> -->
   </body>
 </html>
