--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
-
+<!-- 
 {% if site.related_posts.size >= 1 %}
 <div class="related">
   <h2>Related posts</h2>
@@ -24,4 +24,4 @@ layout: default
     {% endfor %}
   </ul>
 </div>
-{% endif %}
+{% endif %} -->
