--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -38,17 +38,20 @@
 html,
 body {
   overflow-x: hidden;
+  color: #000000;
 }
 
 html {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family:'IBM Plex Sans', sans-serif;
+  font-weight: 300;
+  font-size: 15px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family:'IBM Plex Sans', sans-serif;
   font-weight: 400;
-  color: #313131;
-  letter-spacing: -.025rem;
+  color: #000000;
+  /* letter-spacing: -.025rem; */
 }
 
 
@@ -148,23 +151,34 @@ h1, h2, h3, h4, h5, h6 {
   width: 14rem;
   visibility: hidden;
   overflow-y: auto;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  font-size: .875rem; /* 15px */
-  color: rgba(255,255,255,.6);
+  font-family: 'IBM Plex Sans', sans-serif;
+  /* font-size: .5rem; 15px */
+  color: rgba(0, 0, 0);
   background-color: #202020;
   -webkit-transition: all .3s ease-in-out;
           transition: all .3s ease-in-out;
 }
-@media (min-width: 30em) {
+
+/* @media (min-width: 30em) {
   .sidebar {
     font-size: .75rem; /* 14px */
   }
-}
+} */
 
 /* Sidebar content */
 .sidebar a {
-  font-weight: normal;
-  color: #fff;
+  color: rgb(0, 0, 0);
+  
+}
+
+.sidebar a {
+  color: rgb(0, 0, 0);
+  font-weight: 400;
+}
+
+a:hover,
+a:focus {
+  text-decoration: underline;
 }
 .sidebar-item {
   padding: 1rem;
@@ -323,7 +337,7 @@ a.sidebar-nav-item:focus {
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
-  color: #9a9a9a;
+  color: #000000;
 }
 
 /* Related posts */
@@ -363,7 +377,7 @@ a.sidebar-nav-item:focus {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   color: #ccc;
   text-align: center;
 }
@@ -532,6 +546,43 @@ a.pagination-item:hover {
   color: #8f5536;
 }
 
+/* light grey */
+.theme-base-0g .sidebar,
+.theme-base-0g .sidebar-toggle:active,
+.theme-base-0g #sidebar-checkbox:checked ~ .sidebar-toggle {
+  background-color: #cbcbcb;
+}
+.theme-base-0g .container a,
+.theme-base-0g .sidebar-toggle,
+.theme-base-0g .related-posts li a:hover {
+  color: #cbcbcb;
+}
+
+/* light grey */
+.theme-base-0h .sidebar,
+.theme-base-0h .sidebar-toggle:active,
+.theme-base-0h #sidebar-checkbox:checked ~ .sidebar-toggle {
+  background-color: #cbcbcb;
+}
+.theme-base-0h .container a,
+.theme-base-0h .sidebar-toggle,
+.theme-base-0h .related-posts li a:hover {
+  color: #000000;
+}
+
+/* darker grey */
+.theme-base-0i .sidebar,
+.theme-base-0i .sidebar-toggle:active,
+.theme-base-0i #sidebar-checkbox:checked ~ .sidebar-toggle {
+  background-color: #999999;
+}
+.theme-base-0i .container a,
+.theme-base-0i .sidebar-toggle,
+.theme-base-0i .related-posts li a:hover {
+  color: #000000;
+}
+
+153, 153, 153
 
 /*
  * Overlay sidebar
